Fri Jan  8 14:25:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * Images/GNUmakefile: Added common_WMClose.tiff and
        common_WMCloseBroken.tiff images.
        * Source/NSApplication.m: Use specific images for denoting state of
        documents in windows menu.

Thu Jan  7 16:15:18 1999  Adam Fedor  <fedor@ultra.doc.com>

	* Headers/gnustep/gui/GSContext.h: Add new backend instance
 	variable for storing method pointers.

Thu Jan  7 15:15:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * Tools/make_services.m: Extended to build a map of extensions to
        application names in the applications cache.
        * Source/GSServicesManager.m: Extensions for opening files.
        * Source/NSWorkspaceManager.m: Initial code for handling opening files.
        * GSServicesManager.m: GSConnectToApplication() function added to
        connect to, and if necessary launch, an application.

Wed Jan  6 21:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * Source/NSCell.m: ([-endEditing]) modified as suggested by
        stark@easynet.fr to prevent recursion - clear delegate at start.

Wed Jan  6 17:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * Source/NSApplication.m: minor fix for updating windows menu items.
        * Source/NSWindow.m: Update windows menu when document edit state is
        changed.

Tue Jan  5 18:05:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * Source/NSMatrix.m: bugfix growing matrix - from stark@easynet.fr
        * Source/NSApplication.m: Modified -init method to return the shared
        application object so that +new is effectively a synonym for the
        [+sharedApplication] method - from stark@easynet.fr

Tue Dec 22 12:30:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * Source/GSServicesManager.m: ([-rebuildServicesMenu:]) release submenu